--- a/public/views/operario/registrarPaciente.html
+++ b/public/views/operario/registrarPaciente.html
@@ -35,6 +35,7 @@
     <li>
         <div class="collapsible-header large active"><i class="material-icons">label</i>Lista de Pacientes</div>
         <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
+        <div ><input type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar paciente"></div>
           <table class="table table-striped table-bordered">
           <thead>
             <tr>
@@ -48,7 +49,7 @@
             </tr>
           </thead>
           <tbody>
-              <tr ng-repeat="paciente in pacientes">
+              <tr ng-repeat="paciente in pacientes | filter:busqueda">
                   <td class="nombre"> {{ paciente.nombre }} {{ paciente.apellido }}</td>
                   <td class="correo"> {{ paciente.correo }} </td>
                   <td class="cedula" > {{ paciente.cedula }} </td>
