cambios en la presentacion de creacion de muestras, ahora se usan modales en la seleccion

--- a/views/operario.ejs
+++ b/views/operario.ejs
@@ -31,7 +31,7 @@
       </div>
     </main>
 
-    <footer class="page-footer red darken-1">
+    <footer class="page-footer cyan darken-2">
       <% include app/footer %>
     </footer>
 
