--- a/views/user/sidePaciente.ejs
+++ b/views/user/sidePaciente.ejs
@@ -2,7 +2,7 @@
   <li class="">
     <div class="userView teal">
       <a href="#"><img class="circle" src="imagenes/1.jpg"></a>
-      <a href="#"><span class="white-text name"><%= nombre %> <%= apellido %></span></a>
+      <a href="#"><span class="white-text name">{{datos.nombre}} {{datos.apellido}}</span></a>
       <a href="#"><span class="white-text email">Paciente</span></a>
     </div>
   </li>
