--- a/public/views/operario/registrarMuestra.html
+++ b/public/views/operario/registrarMuestra.html
@@ -1,4 +1,4 @@
-<h4>Administrador de Muestras Medicas</h4>
+<h4 class="text-center">Administrador de Muestras Medicas</h4>
 <hr>
 <ul ng-click="activarInfo()" class="collapsible" data-collapsible="accordion">
     <li>
@@ -14,15 +14,15 @@
 
 
                   <div class="form-group">
-                    Paciente <input style="border:none" type="text" class="form-control" value="{{nuevo_muestra.paciente.nombre}} {{nuevo_muestra.paciente.apellido}}" readonly>
+                    Paciente <input style="border:none" type="text" class="form-control" value="{{nuevo_muestra.paciente.nombre}} {{nuevo_muestra.paciente.apellido}}" readonly ng-click="modalPaciente()">
                   </div>
 
                   <div class="form-group">
-                    Laboratorio <input style="border:none" type="text" class="form-control" value="{{nuevo_muestra.laboratorio.nombre}}" readonly>
+                    Laboratorio <input style="border:none" type="text" class="form-control" value="{{nuevo_muestra.laboratorio.nombre}}" readonly ng-click="modalLaboratorio()">
                   </div>
 
                   <div class="form-group">
-                    Centro Medico <input style="border:none" type="text" class="form-control" value="{{nuevo_muestra.centro.nombre}}" readonly>
+                    Centro Medico <input style="border:none" type="text" class="form-control" value="{{nuevo_muestra.centro.nombre}}" readonly ng-click="modalCentroMed()">
                   </div>
 
               </div>
@@ -64,55 +64,9 @@
         </div>
     </li>
 
-    <li>
-        <div class="collapsible-header large active"><i class="material-icons">label</i>Modal Cargar Pacientes</div>
-        <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
-        <div ><input type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar paciente por nombre"></div>
-            <table id="teibol" class="table table-bordered table-striped">
-              <tbody>
-                  <tr ng-repeat="paciente in pacientes | filter:busqueda"">
-                      <td > {{ paciente.nombre }} {{paciente.apellido}} </td>
-                      <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarPaciente($index)">mode_edit</button></td>
-                  </tr>
-              </tbody>
-            </table>
-        </div>
-    </li>
-
-    <li>
-        <div class="collapsible-header large active"><i class="material-icons">label</i>Modal Cargar Laboratorio</div>
-        <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
-        <div ><input type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar laboratoio"></div>
-            <table id="teibol" class="table table-bordered table-striped">
-              <tbody>
-                  <tr ng-repeat="laboratorio in laboratorios | filter:busqueda"">
-                      <td > {{ laboratorio.nombre }} </td>
-                      <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarLaboratorio($index)">mode_edit</button></td>
-                  </tr>
-              </tbody>
-            </table>
-        </div>
-    </li>
-
-    <li>
-        <div class="collapsible-header large active"><i class="material-icons">label</i>Modal Cargar Centro</div>
-        <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
-        <div ><input type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar Centro Medico"></div>
-            <table id="teibol" class="table table-bordered table-striped">
-              <tbody>
-                  <tr ng-repeat="centro in centros | filter:busqueda"">
-                      <td > {{ centro.nombre }} </td>
-                      <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarCentro($index)">mode_edit</button></td>
-                  </tr>
-              </tbody>
-            </table>
-        </div>
-    </li>
-
-
 </ul>
 
-<!-- Modal Structure -->
+<!-- Modales -->
 <div id="modal1" class="modal bottom-sheet">
   <div class="modal-content">
       <!-- Modal de editar resultado-->
@@ -153,5 +107,47 @@
   </div>
 
 </div>
+
+<div class="modal" id="modalPac" style="padding-left:20px;padding-right:20px;padding-top:10px;margin-top:-10px">
+  <h5 class="text-center indigo-text">Pacientes</h5>
+  <div ><input class="text-center" type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar paciente por nombre"></div>
+  <table id="teibol" class="table table-bordered table-striped">
+    <tbody>
+      <tr ng-repeat="paciente in pacientes | filter:busqueda"">
+        <td > {{ paciente.nombre }} {{paciente.apellido}} </td>
+        <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarPaciente($index)">done</button></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<div class="modal" id="modalLab" style="padding-left:20px;padding-right:20px;padding-top:10px;margin-top:-10px">
+  <h5 class="text-center indigo-text">Laboratorios</h5>
+  <div ><input class="text-center" type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar laboratoio"></div>
+  <table id="teibol" class="table table-bordered table-striped">
+    <tbody>
+      <tr ng-repeat="laboratorio in laboratorios | filter:busqueda"">
+        <td > {{ laboratorio.nombre }} </td>
+        <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarLaboratorio($index)">done</button></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<div class="modal" id="modalCentro" style="padding-left:20px;padding-right:20px;padding-top:10px;margin-top:-10px">
+  <h5 class="text-center indigo-text">Centros M&eacute;dicos</h5>
+  <div ><input class="text-center" type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar Centro Medico"></div>
+    <table id="teibol" class="table table-bordered table-striped">
+      <tbody>
+        <tr ng-repeat="centro in centros | filter:busqueda"">
+          <td > {{ centro.nombre }} </td>
+          <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarCentro($index)">done</button></td>
+        </tr>
+      </tbody>
+    </table>
+</div>  
+
+
+
 
 
