--- a/views/laboratorista.ejs
+++ b/views/laboratorista.ejs
@@ -32,7 +32,7 @@
 
     </main>
 
-    <footer class="page-footer indigo">
+    <footer class="page-footer cyan darken-2">
         <% include app/footer %>
     </footer>
 
