--- a/views/user/sideOperario.ejs
+++ b/views/user/sideOperario.ejs
@@ -6,11 +6,11 @@
       <a href="#"><span class="white-text email">Operario</span></a>
     </div>
   </li>
-  <li><a class="waves-effect" ui-sref="RegistrarPaciente"><i class="material-icons">input</i>Registrar Paciente</a></li>
+  <li><a class="waves-effect" ui-sref="RegistrarPaciente"><i class="material-icons">input</i>Pacientes</a></li>
   <li><div class="divider"></div></li>
-  <li><a class="waves-effect" ui-sref="RegistrarMuestra"><i class="material-icons">view_list</i>Registrar Muestra Medica</a></li>
+  <li><a class="waves-effect" ui-sref="RegistrarMuestra"><i class="material-icons">view_list</i>Muestras M&eacute;dicas</a></li>
   <li><div class="divider"></div></li>
-  <li><a class="waves-effect" ui-sref="Reportes"><i class="material-icons">assessment</i>Graficos Estadisticos</a></li>
+  <li><a class="waves-effect" ui-sref="Reportes"><i class="material-icons">assessment</i>Reportes Estad&iacute;sticos</a></li>
   <li><div class="divider"></div></li>
   <li><a class="waves-effect" href="/logout"><i class="material-icons">power_settings_new</i>Salir</a></li>
 </ul>
