--- a/public/views/operario/muestras.html
+++ b/public/views/operario/muestras.html
@@ -1,6 +1,6 @@
 <h4 class="text-center">Administrador de Muestras Medicas</h4>
 <hr>
-<ul ng-click="activarInfo()" class="collapsible" data-collapsible="accordion">
+<ul class="collapsible popout" ng-click="activarSelect()" data-collapsible="accordion">
     <li>
       <div class="collapsible-header"><i class="material-icons">add</i>Crear Muestra</div>
       <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
@@ -56,8 +56,8 @@
                       <td class="recibido"> {{ muestra.recibido }} </td>
                       <td class="fecha"> {{ muestra.fecha | date:'MM/dd/yyyy'}} </td>
 
-                      <td class= "editMuestra"><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="editMuestra($index)">mode_edit</button></td>
-                      <td class= "eliminarMuestra"><button type="button" style="border:none;background:none" class="small material-icons" ng-click="deleteMuestra($index)">delete</button></td>
+                      <td ><button type="button" style="border:none;background:none" class="small material-icons" ng-click="editarMuestra(muestra)">mode_edit</button></td>
+                      <td ><button type="button" style="border:none;background:none" class="small material-icons" ng-click="eliminarMuestra(muestra)">delete</button></td>
                   </tr>
               </tbody>
             </table>
@@ -67,7 +67,7 @@
 </ul>
 
 <!-- Modales -->
-<div id="modal1" class="modal bottom-sheet">
+<div id="modalEditarMuestra" class="modal">
   <div class="modal-content">
       <!-- Modal de editar resultado-->
     <div>
@@ -109,42 +109,48 @@
 </div>
 
 <div class="modal" id="modalPac" style="padding-left:20px;padding-right:20px;padding-top:10px;margin-top:-10px">
+  <div class="container-fluid center">
   <h5 class="text-center indigo-text">Pacientes</h5>
-  <div ><input class="text-center" type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar paciente por nombre"></div>
+  <div ><input class="text-center" type="search" name="busqueda" ng-model="busqueda.paciente" placeholder="Buscar paciente por nombre"></div>
   <table id="teibol" class="table table-bordered table-striped">
     <tbody>
-      <tr ng-repeat="paciente in pacientes | filter:busqueda"">
+      <tr ng-repeat="paciente in pacientes | filter:busqueda.paciente">
         <td > {{ paciente.nombre }} {{paciente.apellido}} </td>
         <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarPaciente(paciente)">done</button></td>
       </tr>
     </tbody>
   </table>
+  </div>
 </div>
 
 <div class="modal" id="modalLab" style="padding-left:20px;padding-right:20px;padding-top:10px;margin-top:-10px">
+  <div class="container-fluid center">
   <h5 class="text-center indigo-text">Laboratorios</h5>
-  <div ><input class="text-center" type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar laboratoio"></div>
+  <div ><input class="text-center" type="search" name="busqueda" ng-model="busqueda.laboratorio" placeholder="Buscar laboratoio"></div>
   <table id="teibol" class="table table-bordered table-striped">
     <tbody>
-      <tr ng-repeat="laboratorio in laboratorios | filter:busqueda"">
+      <tr ng-repeat="laboratorio in laboratorios | filter:{nombre:busqueda.laboratorio}">
         <td > {{ laboratorio.nombre }} </td>
         <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarLaboratorio(laboratorio)">done</button></td>
       </tr>
     </tbody>
   </table>
+  </div>
 </div>
 
 <div class="modal" id="modalCentro" style="padding-left:20px;padding-right:20px;padding-top:10px;margin-top:-10px">
+  <div class="container-fluid center">
   <h5 class="text-center indigo-text">Centros M&eacute;dicos</h5>
-  <div ><input class="text-center" type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar Centro Medico"></div>
+  <div ><input class="text-center" type="search" name="busqueda" ng-model="busqueda.centro" placeholder="Buscar Centro Medico"></div>
     <table id="teibol" class="table table-bordered table-striped">
       <tbody>
-        <tr ng-repeat="centro in centros | filter:busqueda"">
+        <tr ng-repeat="centro in centros | filter:{nombre:busqueda.centro}">
           <td > {{ centro.nombre }} </td>
           <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarCentro(centro)">done</button></td>
         </tr>
       </tbody>
     </table>
+    </div>
 </div>  
 
 
