--- a/public/views/operario/muestras.html
+++ b/public/views/operario/muestras.html
@@ -8,9 +8,9 @@
               <div class="modal-body">
 
                   <div class="form-group col s12" >
-                    Tipo de muestra <select ng-init="nuevo_muestra.tipo = tipos[0]" ng-options="tipo for tipo in tipos" ng-model="nuevo_muestra.tipo">
-                    </select>
+                    <input ng-model="select_tipo" type="text" name="tipo-muestra">
                   </div>
+                  <h6>Prueba de seleccion: {{select_tipo}}</h6>
 
 
                   <div class="form-group">
@@ -50,7 +50,7 @@
                 </tr>
               </thead>
               <tbody>
-                  <tr ng-repeat="muestra in muestras | filter:busqueda"">
+                  <tr ng-repeat="muestra in muestras | filter:busqueda">
                       <td class="tipo"> {{ muestra.tipo }} </td>
                       <td class="cod_barras"> {{ muestra.cod_barras }} </td>
                       <td class="recibido"> {{ muestra.recibido }} </td>
@@ -71,34 +71,27 @@
   <div class="modal-content">
       <!-- Modal de editar resultado-->
     <div>
-      <form > 
-      <div class="modal-body">
-          <div class="form-group">
-            <input type="text" class="form-control" name="tipo" ng-model="editar_muestra.tipo" placeholder="tipo" required>
-          </div>
-          <div class="form-group hide">
-            <input type="text" class="form-control" name="cod_barras" ng-model="editar_muestra.cod_barras" placeholder="cod_barras" required>
-          </div>
-          
-          <div class="form-group" >
-            <select name="paciente" ng-model="editar_muestra.paciente">
-              <option ng-repeat="paciente in pacientes" value="{{paciente._id}}"> {{paciente.nombre}} {{paciente.apellido}}</option>
-            </select>
-          </div>
+      <form> 
+          <div class="modal-body">
 
-          <div class="form-group" >
-            <select name="laboratorio" ng-model="editar_muestra.laboratorio">
-              <option ng-repeat="laboratorio in laboratorios" value="{{laboratorio._id}}"> {{laboratorio.nombre}}</option>
-            </select>
-          </div>
+                  <div class="form-group col s12" >
+                    Tipo de muestra <select ng-init="editar_muestra.tipo = tipos[-1]" ng-options="tipo for tipo in tipos" ng-model="editar_muestra.tipo">
+                    </select>
+                  </div>
 
-          <div class="form-group" >
-            <select name="centro" ng-model="editar_muestra.centro">
-              <option ng-repeat="centro in centros" value="{{centro._id}}"> {{centro.nombre}} </option>
-            </select>
-          </div>
+                  <div class="form-group">
+                    Paciente <input style="border:none" type="text" class="form-control" value="{{editar_muestra._paciente.nombre}} {{editar_muestra._paciente.apellido}}" readonly ng-click="modalPaciente()">
+                  </div>
 
-      </div>
+                  <div class="form-group">
+                    Laboratorio <input style="border:none" type="text" class="form-control" value="{{editar_muestra._laboratorio.nombre}}" readonly ng-click="modalLaboratorio()">
+                  </div>
+
+                  <div class="form-group">
+                    Centro Medico <input style="border:none" type="text" class="form-control" value="{{editar_muestra._centro.nombre}}" readonly ng-click="modalCentroMed()">
+                  </div>
+
+              </div>             
       <div class="modal-footer">
         <button type="submit" class="btn btn-primary" ng-disabled="disEditMuestra" ng-click="putMuestra()">Aceptar</button>
       </div>
