se actualizo lo de laboratorista

--- a/public/views/laboratorista/muestra.html
+++ b/public/views/laboratorista/muestra.html
@@ -24,7 +24,7 @@
                         <label for="{{muestra._id}}"></label> 
                       </td>
                       <td > {{ muestra.fecha | date:'MM/dd/yyyy'}} </td>
-                      <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarExamenes(muestra._id)">mode_edit</button></td>
+                      <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarExamenes(muestra)">mode_edit</button></td>
                   </tr>
               </tbody>
             </table>
