--- a/public/views/laboratorista/editar.html
+++ b/public/views/laboratorista/editar.html
@@ -1,94 +1,38 @@
-<div class="container examenes" ng-repeat="examen in examenes">
-  <div class="row center">  
-    <h2 class="col s4">{{examen.nombre}} </h2>
-    <div ng-click="setExamen(examen._id)" class="col s4 right" style="padding-top:30px">
-      <a class="btn-floating btn-large waves-effect waves-light red">
-        <i class="large material-icons">add</i>
-      </a>
-    </div>
-  </div>
-  <table class="table table-bordered table-striped">
-    <thead>
-      <tr>
-        <th>parametro</th>
-        <th>unidades</th>
-        <th>resultado</th>
-        <th>valores de referencia</th>
-        <th>editar</th>
-        <th>delete</th>
-      </tr>
-    </thead>
-    <tbody id = "tabla-body-examenes">
-        <tr ng-repeat="resultado in examen.resultados">
-            <td class="parametro"> {{resultado.parametro}}</td>
-            <td class="unidades"> {{resultado.unidades}}  </td>
-            <td class="resultado"> {{resultado.resultado}}  </td>
-            <td class="valores_referencia"> {{resultado.valores_referencia}}  </td>
-            <td class= "editar"><button type="button" class="glyphicon glyphicon-edit" ng-click="editar($parent.$index, $index)"></button></td>
-            <td class= "eliminar"><button type="button" class="glyphicon glyphicon-remove-circle" ng-click="delete($parent.$index, $index)"></button></td>
-        </tr>
-    </tbody>
-  </table>
-</div>
-
+<h4>Examenes de la muestra {{muestra.cod_barras}}</h4>
 <hr>
+<ul class="collapsible popout" data-collapsible="accordion">
+    <li ng-repeat="examen in examenes">
+        <div class="collapsible-header large active"><i class="material-icons">label</i>Examen medico: {{examen.nombre}}</div>
+        <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
+        <div class="row">
+          <div class="col s8"><input type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar resultados"></div>
+          <div style="padding-top:10px;" class="col"><a  class="waves-effect waves-light btn"><i class="material-icons right">note_add</i>Nuevo resultado</a></div>
 
-<!-- Modal Structure -->
-<div id="modal1" class="modal bottom-sheet">
-  <div class="modal-content">
-      <!-- Modal de editar resultado-->
-    <div>
-      <form > 
-        <div class="modal-body">
-            <div class="form-group">
-              <input type="text" class="form-control" name="parametro" ng-model="edita.parametro">
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="unidades" ng-model="edita.unidades">
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="resultado" ng-model="edita.resultado">
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="valores_referencia" ng-model="edita.valores_referencia">
-            </div>
         </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-primary" ng-click="put(edita)">Actualizar </button>
+        
+          <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>Parametro</th>
+              <th>Unidades</th>
+              <th>Resultado</th>
+              <th>Valores/referencia</th>
+              <th>editar</th>
+              <th>eliminar</th>
+            </tr>
+          </thead>
+          <tbody>
+              <tr ng-repeat="resultado in examen.resultados | filter:busqueda">
+                  <td > {{ resultado.parametro }} </td>
+                  <td > {{ resultado.unidades }} </td>
+                  <td > {{ resultado.resultado }} </td>
+                  <td > {{ resultado.valores_referencia }} </td>
+
+                  <td ><button type="button" style="border:none;background:none" class="small material-icons" href="#modal1" ng-click="editarResultado(resultado)">mode_edit</button></td>
+                  <td class= "eliminar"><button type="button" style="border:none;background:none" class="small material-icons" ng-click="eliminarResultado(resultado)">delete</button></td>
+              </tr>
+          </tbody>
+        </table>
         </div>
-      </form>
-    </div>
-  </div>
-</div>
-
-
-  <!-- Modal Structure -->
-  <div id="modal2" class="modal modal">
-    <div class="modal-content">
-      <div>
-        <form > 
-            <div class="modal-body">
-                <div class="form-group">
-                  <input type="text" class="form-control" name="examen" ng-model="examen_id" readonly>
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="parametro" ng-model="nuevo_resultado.parametro" placeholder="Parametro">
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="unidades" ng-model="nuevo_resultado.unidades" placeholder="Unidades">
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="resultado" ng-model="nuevo_resultado.resultado" placeholder="Resultado">
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="valores_referencia" ng-model="nuevo_resultado.valores_referencia" placeholder="Valores de referencia">
-                </div>
-            </div>
-            <div class="modal-footer">
-              <button type="submit" class="btn btn-primary" ng-disabled="isDisabled" ng-click="agregar()">Crear</button>
-            </div>
-          </form>
-      </div>
-    </div>
-  </div>
-
+    </li>
+</ul>
