se reorganizo/cambio nombres de archivos, carpetas y angularJS de /laboratorista

--- a/views/user/sideLaboratorista.ejs
+++ b/views/user/sideLaboratorista.ejs
@@ -1,9 +1,9 @@
 <ul id="slide-out" class="side-nav fixed">
   <li class="">
     <div class="userView teal">
-      <a href="#"><img class="circle" src="imagenes/1.jpg"></a>
-      <a href="#"><span class="white-text name"><%= nombre %> <%= apellido %></span></a>
-      <a href="#"><span class="white-text email">Laboratorista</span></a>
+      <a href="/laboratorista"><img class="circle" src="imagenes/1.jpg"></a>
+      <a href="/laboratorista"><span class="white-text name"><%= nombre %> <%= apellido %></span></a>
+      <a href="/laboratorista"><span class="white-text email">Laboratorista</span></a>
     </div>
   </li>
   <li><a class="waves-effect" href="#"><i class="material-icons">view_column</i>Muestras</a></li>
