--- a/public/views/laboratorista/examenes.html
+++ b/public/views/laboratorista/examenes.html
@@ -2,11 +2,12 @@
 <hr>
 <ul class="collapsible popout" data-collapsible="accordion">
     <li ng-repeat="examen in examenes">
-        <div class="collapsible-header large active"><i class="material-icons">label</i>Examen medico: {{examen.nombre}}</div>
+        <div class="collapsible-header large active"><i class="material-icons">label</i>Examen medico: {{examen.nombre}} | {{examen.resultados.length}} resultados</div>
         <div class="collapsible-body" style="padding-left:20px;padding-right:20px">
+
         <div class="row">
           <div class="col s8"><input type="search" name="busqueda" ng-model="busqueda.$" placeholder="Buscar resultados"></div>
-          <div style="padding-top:10px;" class="col"><a  class="waves-effect waves-light btn"><i class="material-icons right">note_add</i>Nuevo resultado</a></div>
+          <div ng-click="nuevoResultado(examen)" style="padding-top:10px;" class="col"><a  class="waves-effect waves-light btn"><i class="material-icons right">note_add</i>Nuevo resultado</a></div>
 
         </div>
         
@@ -29,10 +30,52 @@
                   <td > {{ resultado.valores_referencia }} </td>
 
                   <td ><button type="button" style="border:none;background:none" class="small material-icons" href="#modal1" ng-click="editarResultado(resultado)">mode_edit</button></td>
-                  <td class= "eliminar"><button type="button" style="border:none;background:none" class="small material-icons" ng-click="eliminarResultado(resultado)">delete</button></td>
+                  <td class= "eliminar"><button type="button" style="border:none;background:none" class="small material-icons" ng-click="eliminarResultado(examen, resultado)">delete</button></td>
               </tr>
           </tbody>
         </table>
         </div>
     </li>
 </ul>
+
+
+<div id="modalCrearResultado" class="modal" style="padding-left:20px;padding-right:20px;padding-top:10px;margin-top:-10px">
+  <form > 
+    <div class="modal-body">
+
+        <div class="row">
+          <div class="input-field col s12">
+            <input id="parametro" type="text" class="validate" ng-model="nuevo_resultado.parametro">
+            <label for="parametro">Parametro medico</label>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-field col s12">
+            <input id="unidades" type="text" class="validate" ng-model="nuevo_resultado.unidades">
+            <label for="unidades">Unidades</label>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-field col s12">
+            <input id="resultado" type="text" class="validate" ng-model="nuevo_resultado.resultado">
+            <label for="resultado">Resultado</label>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-field col s12">
+            <input id="valores_referencia" type="text" class="validate" ng-model="nuevo_resultado.valores_referencia">
+            <label for="valores_referencia">Valores de referencia</label>
+          </div>
+        </div>
+
+    </div>
+
+    <div class="row modal-footer">
+      <button type="submit" class="btn btn-primary col s5 left" ng-click="agregarResultado()">Crear</button>
+      <button type="reset" class="btn btn-default col s5 right">Cancelar</button>
+    </div>
+  </form>
+</div>
