--- a/public/views/laboratorista/muestras.html
+++ b/public/views/laboratorista/muestras.html
@@ -10,7 +10,7 @@
                 <tr>
                   <th>tipo</th>
                   <th>cod_barras</th>
-                  <th>Llego muestra</th>
+                  <th>Estado</th>
                   <th>fecha</th>
                   <th>examenes</th>
                 </tr>
@@ -19,12 +19,15 @@
                   <tr ng-repeat="muestra in muestras | filter:busqueda"">
                       <td > {{ muestra.tipo }} </td>
                       <td > {{ muestra.cod_barras }} </td>
+                      <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="estado(muestra)">comment</button></td>  
+                      <!--
                       <td >
                         <input type="checkbox" id="{{muestra._id}}" class="filled-in" ng-model="checked" ng-disabled="checked" />
                         <label for="{{muestra._id}}"></label> 
                       </td>
+                      -->
                       <td > {{ muestra.fecha | date:'MM/dd/yyyy'}} </td>
-                      <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarExamenes(muestra)">mode_edit</button></td>
+                      <td ><button type="button" style="border:none;background:none" class="small material-icons" data-toggle="modal" ng-click="cargarExamenes(muestra)">view_list</button></td>
                   </tr>
               </tbody>
             </table>
@@ -32,3 +35,36 @@
     </li>
 
 </ul>
+
+
+
+<div id="modalEstado" class="modal" style="padding-left:20px;padding-right:20px;padding-top:10px;margin-top:-10px">
+  <form > 
+    <div class="modal-body">
+
+        <p>
+          <input name="group1" type="radio" id="test1" />
+          <label for="test1">Registrada</label>
+        </p>
+        <p>
+          <input name="group1" type="radio" id="test2" />
+          <label for="test2">En proceso</label>
+        </p>
+
+
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">mode_edit</i>
+            <textarea id="address" ng-model="observacion" class="materialize-textarea"></textarea>
+            <label for="address">Observaciones</label>
+          </div>
+        </div>
+
+    </div>
+
+    <div class="row modal-footer">
+      <button type="submit" class="btn btn-primary col s5 left" ng-click="actualizarObservacion()">Aceptar</button>
+      <button type="reset" class="btn btn-default col s5 right">Cancelar</button>
+    </div>
+  </form>
+</div>
