--- a/public/views/laboratorista/examenes.html
+++ b/public/views/laboratorista/examenes.html
@@ -1,4 +1,4 @@
-<h4>Examenes de la muestra {{muestra.cod_barras}}</h4>
+<h4 class="text-center">Examenes de la muestra {{muestra.cod_barras}}</h4>
 <hr>
 <ul class="collapsible popout" data-collapsible="accordion">
     <li ng-repeat="examen in examenes">
