--- a/public/views/laboratorista/muestras.html
+++ b/public/views/laboratorista/muestras.html
@@ -1,4 +1,4 @@
-<h4>Administrador de Muestras Medicas</h4>
+<h4 class="text-center">Administrador de Muestras Medicas</h4>
 <hr>
 <ul ng-click="activarInfo()" class="collapsible" data-collapsible="accordion">
     <li>
