--- a/public/views/operario/muestras.html
+++ b/public/views/operario/muestras.html
@@ -7,10 +7,14 @@
         <form> 
               <div class="modal-body">
 
-                  <div class="form-group col s12" >
-                    <input ng-model="select_tipo" type="text" name="tipo-muestra">
+                  <div class="form-group col s12">
+                    <select ng-model="select_tipo">
+                      <option ng-repeat="tipo in tipos"></option>
+                    </select>
+                    <input type="text" ng-model="select_tipo">
+                    <h6>dijo: {{selec_tipo}}</h6>
                   </div>
-                  <h6>Prueba de seleccion: {{select_tipo}}</h6>
+                  
 
 
                   <div class="form-group">
