--- a/public/views/operario/pacientes.html
+++ b/public/views/operario/pacientes.html
@@ -1,4 +1,4 @@
-<h4>Administrador de Pacientes</h4>
+<h4 class="text-center">Administrador de Pacientes</h4>
 <hr>
 <ul class="collapsible popout" data-collapsible="accordion">
     <li>
@@ -66,7 +66,9 @@
 
 <!-- Modal Structure -->
 
-<div id="modalEditarPaciente" class="modal">
+<div id="modalEditarPaciente" class="modal" style="padding-left:20px;padding-right:20px;padding-top:10px;margin-top:-10px">
+  <div class="container-fluid center">
+  <h5 class="text-center indigo-text">Pacientes</h5>
   <form >
     <div class="container-fluid center">
         <div class="form-group">
