--- a/public/views/paciente/examenes.html
+++ b/public/views/paciente/examenes.html
@@ -1,4 +1,5 @@
-<h4 style="padding-left:35px">Mis Examenes</h4>
+<div class="container">
+<h4 class="text-center">Mis Ex&aacute;menes</h4>
 <hr>
 <ul >
     <li>
@@ -25,5 +26,5 @@
         </div>
     </li>
 </ul>
-
+</div>
 
