--- a/views/user/sidePaciente.ejs
+++ b/views/user/sidePaciente.ejs
@@ -1,6 +1,6 @@
 <ul id="slide-out" class="side-nav fixed">
   <li class="">
-    <div class="userView teal">
+    <div class="userView cyan darken-2">
       <a href="#"><img class="circle" src="imagenes/1.jpg"></a>
       <a href="#"><span class="white-text name">{{datos.nombre}} {{datos.apellido}}</span></a>
       <a href="#"><span class="white-text email">Paciente</span></a>
