--- a/public/views/paciente/datos.html
+++ b/public/views/paciente/datos.html
@@ -1,8 +1,10 @@
 <!--<div class="section no-pad-bot">-->
 <div class="container">
+<h4 class="col s12 text-center">Actualice sus datos</h4><hr>
+
     <div class="row">
         <form id="formularioActualizarPaciente" class="col s12">
-            <h4 class="col s12 center">Actualice sus datos</h4><hr>
+            
             <div class="input-field col s12">
               <i class="material-icons prefix">account_circle</i>
               <input id="icon_prefix" type="text" name="nombre" placeholder="Ingrese sus nombres" ng-model="datos.nombre" require/>
