--- a/views/user/sideLaboratorista.ejs
+++ b/views/user/sideLaboratorista.ejs
@@ -1,6 +1,6 @@
 <ul id="slide-out" class="side-nav fixed">
   <li class="">
-    <div class="userView teal">
+    <div class="userView cyan darken-2">
       <a href="/laboratorista"><img class="circle" src="imagenes/1.jpg"></a>
       <a href="/laboratorista"><span class="white-text name"><%= nombre %> <%= apellido %></span></a>
       <a href="/laboratorista"><span class="white-text email">Laboratorista</span></a>
