--- a/public/views/operario/reportes.html
+++ b/public/views/operario/reportes.html
@@ -67,3 +67,24 @@
 -->
 
 <h2>holaaaa</h2>
+
+<div ng-controller="controllerReportes">
+    <nvd3 options="options" data="data"></nvd3>
+</div>
+<!--
+<script>
+  var datos = [135, 100, 150, 125, 225, 175];
+  var config = { columnWidth: 45, columnGap: 5, margin: 10, height: 235 };
+ 
+  d3.select("svg")
+      .selectAll("rect")
+      .data(datos)
+    .enter().append("rect")
+      .attr("width", config.columnWidth)
+      .attr("x", function(d,i) {
+         return config.margin + i * (config.columnWidth + config.columnGap)
+       })
+      .attr("y", function(d,i) { return config.height - d })
+      .attr("height", function(d,i) { return d });
+</script>
+-->
