--- a/views/operario.ejs
+++ b/views/operario.ejs
@@ -3,7 +3,14 @@
   <head>
     <title>Salud Primero - Operario</title>    
     <% include app/scripts %>
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.1/nv.d3.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.1/nv.d3.min.js"></script>
+    <script src="https://rawgit.com/krispo/angular-nvd3/v1.0.5/dist/angular-nvd3.js"></script>
+
     <script type="text/javascript" src="scripts/operator/appAngular.js"></script>
+
   </head>
 
   <body ng-app="appOperator">
