--- a/views/user/sideOperario.ejs
+++ b/views/user/sideOperario.ejs
@@ -10,7 +10,8 @@
   <li><div class="divider"></div></li>
   <li><a class="waves-effect" ui-sref="muestras"><i class="material-icons">view_list</i>Muestras M&eacute;dicas</a></li>
   <li><div class="divider"></div></li>
-  <li><a class="waves-effect" ui-sref="reportes"><i class="material-icons">assessment</i>Reportes Estad&iacute;sticos</a></li>
+  <li><a class="waves-effect" ui-sref="reportesMensuales"><i class="material-icons">assessment</i>Reportes Estad&iacute;sticos</a></li>
+  <li><a class="waves-effect" ui-sref="reportesTotales"><i class="material-icons">assessment</i>Reportes Estad&iacute;sticos</a></li>
   <li><div class="divider"></div></li>
   <li><a class="waves-effect" href="/logout"><i class="material-icons">power_settings_new</i>Salir</a></li>
 </ul>
